Fixing icons for inline annotations in theme.

--- a/annotatedocs/themes/annotatedocs/annotationsmenu.html
+++ b/annotatedocs/themes/annotatedocs/annotationsmenu.html
@@ -3,9 +3,9 @@
         <span class="fa fa-caret-down"></span>
         <span class="annotations-title">
             Annotations
-            <span class="fa fa-bell" title="This page contains hints. See the annotations in the content for more information."></span>
-            <span class="fa fa-warning" title="This page contains warnings. See the annotations in the content for more information."></span>
-            <span class="fa fa-sitemap" title="You have global warnings. Visit the index page for more information."></span>
+            <span class="hints-indicator" title="This page contains hints. See the annotations in the content for more information."></span>
+            <span class="warnings-indicator" title="This page contains warnings. See the annotations in the content for more information."></span>
+            <span class="global-indicator" title="You have global warnings. Visit the index page for more information."></span>
         </span>
     </span>
     <div class="annotations-detail">
